bench/sensitive/critical/evidence/1f63de9660f5789c899a9e3c2b3bdc5c687cf487_20260113-092917/logs/fuzz_runner.log
AUDIT_META runner=fuzz commit=1f63de9660f5789c899a9e3c2b3bdc5c687cf487 mode=critical seed=8675309 limits=MAX_BLOCK_ITEMS:10000,MAX_RLE_RUN:2000
=== FUZZ SUITE (Time-Boxed) ===
Starting fuzzing for 20000ms...
[AUDIT] Run 0: mode=RANDOM seed=14014
FAIL: Crash at seed 14014. Code=1 C:\Users\shilo\Documents\GitHub\Gred-In-Compression-System\bench\sensitive\critical\fuzz_worker.ts:1
import { GICSv2Encoder, GICSv2Decoder, IntegrityError, IncompleteDataError, GicsError } from '../../../src/index.js';
                        ^

SyntaxError: The requested module '../../../src/index.js' does not provide an export named 'GICSv2Decoder'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.18.0

Result: 1 Runs, 0 PASSED, 1 FAILED
AUDIT_RESULT runner=fuzz status=FAIL exit_code=1 duration_ms=2002 runs=1
Fuzz Suite FAILED
